rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__has_schema_privilege.snap
---
source: cubesql/src/compile/mod.rs
assertion_line: 9882
expression: "execute_query(\"SELECT\n                    nspname,\n                    has_schema_privilege('ovr', nspname, 'CREATE') create_top,\n                    has_schema_privilege('ovr', nspname, 'create') create_lower,\n                    has_schema_privilege('ovr', nspname, 'USAGE') usage_top,\n                    has_schema_privilege('ovr', nspname, 'usage') usage_lower\n                FROM pg_namespace\n                ORDER BY nspname ASC\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+--------------------+------------+--------------+-----------+-------------+
| nspname            | create_top | create_lower | usage_top | usage_lower |
+--------------------+------------+--------------+-----------+-------------+
| information_schema | false      | false        | true      | true        |
| pg_catalog         | false      | false        | true      | true        |
| public             | false      | false        | true      | true        |
+--------------------+------------+--------------+-----------+-------------+
