rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__holistics_left_join_query.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"\n                SELECT \n                    TRIM(c.conname) AS constraint_name, \n                    CASE c.contype WHEN 'p' THEN 'PRIMARY KEY' WHEN 'u' THEN 'UNIQUE' WHEN 'f' THEN 'FOREIGN KEY' END AS constraint_type, \n                    TRIM(cn.nspname) AS constraint_schema, \n                    TRIM(tn.nspname) AS schema_name, \n                    TRIM(tc.relname) AS table_name, \n                    TRIM(ta.attname) AS column_name, \n                    TRIM(fn.nspname) AS referenced_schema_name, \n                    TRIM(fc.relname) AS referenced_table_name, \n                    TRIM(fa.attname) AS referenced_column_name, \n                    o.ord AS ordinal_position\n                FROM pg_constraint c\n                    LEFT JOIN generate_series(1,1600) as o(ord) ON c.conkey[o.ord] IS NOT  NULL\n                    LEFT JOIN pg_attribute ta ON c.conrelid=ta.attrelid AND ta.attnum=c.conkey[o.ord]\n                    LEFT JOIN pg_attribute fa ON c.confrelid=fa.attrelid AND fa.attnum=c.confkey[o.ord]\n                    LEFT JOIN pg_class tc ON ta.attrelid=tc.oid\n                    LEFT JOIN pg_class fc ON fa.attrelid=fc.oid\n                    LEFT JOIN pg_namespace cn ON c.connamespace=cn.oid\n                    LEFT JOIN pg_namespace tn ON tc.relnamespace=tn.oid\n                    LEFT JOIN pg_namespace fn ON fc.relnamespace=fn.oid\n                WHERE \n                    CASE c.contype WHEN 'p' \n                    THEN 'PRIMARY KEY' WHEN 'u' \n                    THEN 'UNIQUE' WHEN 'f' \n                    THEN 'FOREIGN KEY' \n                    END \n                IN ('UNIQUE', 'PRIMARY KEY', 'FOREIGN KEY') AND tc.relkind = 'r'\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-----------------+-----------------+-------------------+-------------+------------+-------------+------------------------+-----------------------+------------------------+------------------+
| constraint_name | constraint_type | constraint_schema | schema_name | table_name | column_name | referenced_schema_name | referenced_table_name | referenced_column_name | ordinal_position |
+-----------------+-----------------+-------------------+-------------+------------+-------------+------------------------+-----------------------+------------------------+------------------+
+-----------------+-----------------+-------------------+-------------+------------+-------------+------------------------+-----------------------+------------------------+------------------+
