rust/cubesql/cubesql/src/compile/snapshots/cubesql__compile__tests__holistics_schema_privilege_query.snap
---
source: cubesql/src/compile/mod.rs
expression: "execute_query(\"\n                SELECT n.nspname AS schema_name\n                FROM pg_namespace n\n                WHERE n.nspname NOT LIKE 'pg_%' AND n.nspname <> 'information_schema' AND has_schema_privilege(n.nspname, 'USAGE'::text);\n                \".to_string(),\n            DatabaseProtocol::PostgreSQL).await?"
---
+-------------+
| schema_name |
+-------------+
| public      |
+-------------+
